k8s/kompose/redis-commander-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Go\bin\kompose.exe convert -f docker-compose.build.yaml
    kompose.service.expose: "true"
    kompose.service.type: loadbalancer
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: redis-commander
  name: redis-commander
spec:
  ports:
  - name: "8081"
    port: 8081
    targetPort: 8081
  selector:
    io.kompose.service: redis-commander
  type: LoadBalancer
status:
  loadBalancer: {}
