k8s/kompose/scheduler-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Go\bin\kompose.exe convert -f docker-compose.build.yaml
    kompose.service.expose: "true"
    kompose.service.type: loadbalancer
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: scheduler
  name: scheduler
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
    nodePort: 32222
  selector:
    io.kompose.service: scheduler
  type: LoadBalancer
status:
  loadBalancer: {}
